# samples-mobile

./: .gitattributes  .gitignore  README.md  README_pt.md  build.gradle  settings.gradle
.github/: CODE_OF_CONDUCT.md  ISSUE_TEMPLATE.md
android/: settings.gradle
android/totvs-camera-app/: build.gradle  google-services.json
android/totvs-camera-core/: build.gradle
android/totvs-camera-view/: build.gradle
android/totvs-camera-vision/: build.gradle
app/: build.gradle
deep-linking/: README.md  README_pt.md
gradle/wrapper/: gradle-wrapper.properties
ios/TOTVSCamera/: CameraCore.podspec
ios/TOTVSCameraKit/: TOTVSCameraKit.podspec
ios/TotvsCamera/: CameraCore.podspec  CameraView.podspec  README.md
react-native-totvs-camera/: README.md  index.js
react-native-totvs-camera-app/: App.js  package-lock.json  package.json
react-native-totvs-camera-app/android/: .project  settings.gradle
react-native-totvs-camera/android/: build.gradle
react-native-totvs-camera/ios/: RNReactNativeTotvsCamera.podspec
react-native-totvs-camera/src/: CameraView.js  index.js  styles.js
react-native-totvs-clockin-vision/: README.md
react-native-totvs-clockin-vision/ios/: RNReactNativeTotvsClockinVision.h
react-native-totvs-clockin-vision/src/: index.js
react-native/react-native-clockin-vision-app/: README.MD  app.json  package.json
react-native/react-native-totvs-clockin-vision/android/: CMakeLists.txt  build.gradle  settings.gradle
react-native/react-native-totvs-clockin-vision/android/gradle/wrapper/: gradle-wrapper.properties
react-native/react-native-totvs-clockin-vision/android/src/main/cpp/: DLibModelType.h  EmbeddingsManager.cpp  FaceRecognizer.cpp  FaceRecognizer.h  FaceRecognizer_wrap.cpp  FaceUtils.h  RecognitionInfo.cpp
react-native/react-native-totvs-clockin-vision/android/src/main/java/com/totvs/clockin/vision/: AbstractReactVisionModule.kt  AbstractViewManager.kt  AbstractVisionModule.kt  ReactVisionBarcodeModule.kt  ReactVisionFaceManager.kt  ReactVisionPackage.kt  VisionBarcodeModule.kt  VisionFaceManager.kt  VisionFaceModule.kt  VisionModule.kt  VisionPackage.kt
react-native/react-native-totvs-clockin-vision/android/src/main/java/com/totvs/clockin/vision/core/: ClockInVisionModuleOptions.kt  DetectionModel.kt  ModelProvider.kt  NativeOutput.kt  RecognitionModel.kt
react-native/react-native-totvs-clockin-vision/android/src/main/java/com/totvs/clockin/vision/events/: OnFaceProximity.kt  OnFaceRecognized.kt  OnLiveness.kt
react-native/react-native-totvs-clockin-vision/android/src/main/java/com/totvs/clockin/vision/face/: AnimateNose.kt  Liveness.kt
react-native/react-native-totvs-clockin-vision/android/src/main/java/com/totvs/clockin/vision/graphic/: StandardBoundsScaler.kt
react-native/react-native-totvs-clockin-vision/android/src/main/java/com/totvs/clockin/vision/internal/: FaceRecognizer.java  FaceRecognizerJNIJNI.java  NativeFace.kt  NativeFaceModel.kt
react-native/react-native-totvs-clockin-vision/android/src/main/java/com/totvs/clockin/vision/utils/: FileUtils.kt  Images.kt
react-native/react-native-totvs-clockin-vision/android/src/main/java/com/totvs/clockin/vision/view/: VisionFaceCameraView.kt
react-native/react-native-totvs-clockin-vision/android/src/main/java/com/tzutalin/dlib/: VisionDetRet.java
totvs-camera/: build.gradle
totvs-camera-app/: build.gradle
totvs-camera-core/: build.gradle
totvs-camera-view/: build.gradle
totvs-camera-vision/: build.gradle
totvs-vision/: build.gradle
totvs-vision-app/: build.gradle
(+547 files in other folders)
